
* Windows installation now installs data and documentation files in the
  subdirectory <prefix>/share/harp.

* Fix issue in deriving total column from partial column profile if partial
  column profile did not have {time,vertical} dimensions.

* Fix invalid results from binning operation/function.

* Improve speed of --list-derivations on a product.

0.6 2017-04-23
~~~~~~~~~~~~~~

* Added ingestion support for ACE-FTS, CALIPSO, Cloud CCI, and NPP-Suomi.

* Added bin() and set() operations.

* Added optional data_type parameter to derive() operation.

* Major refactoring of internal implementation of operations (greatly
  reducing and simplifying the code).

* Fix application of apriori for smoothed column derivation (for vertical
  range where partial columns are NaN, don't subtract apriori*AVK, but just
  set to apriori).

* Fix memory issue in partial column from vmr dry air derivation.

* Remove double definition of radiance conversions.

* Added global HARP option `regrid_out_of_bounds`.

* Added harp_product_bin() function.

* Add data_type parameter to harp_product_add_derived_variable() and
  harp_product_get_derived_variable() functions.

* Added data_type parameter to harp_product_get_derived_variable() and
  harp_product_add_derived_variable() functions.

* Allow 'Conventions' global attribute to contain more than just a reference
  to HARP.

* Renamed O3MSAF codadef to ACSAF. When updating HARP, you should remove
  any existing O3SMAF-*.codadef files from your installation directory.
  Otherwise you will get 'detection rule for ... is shadowed by ... ' errors.

* Fixed issue with TES TL2CH4L ingestion.

* Updates to Aeolus, S5P, QA4ECV, and Ozone CCI product ingestions.

0.5 2017-03-26
~~~~~~~~~~~~~~

* Changed Open Source licence of HARP from GPLv2 to BSD (3-Clause).

* Changed all '-' to '_' in operation function names to make them identifiers.

* Added harpmerge command line tool.

* Added regrid(), rename(), smooth(), derive_smoothed_column(),