@@ -428,11 +428,11 @@
 </tr>
 <tr class="row-odd"><td><strong>cloud_albedo</strong></td>
 <td><em>path</em></td>
-<td><strong>/PRODUCT/cloud_albedo[]</strong></td>
+<td><strong>/PRODUCT/cloud_albedo_crb[]</strong></td>
 </tr>
 <tr class="row-even"><td><strong>cloud_albedo_uncertainty</strong></td>
 <td><em>path</em></td>
-<td><strong>/PRODUCT/cloud_albedo_precision[]</strong></td>
+<td><strong>/PRODUCT/cloud_albedo_crb_precision[]</strong></td>
 </tr>
 </tbody>
 </table>
