@@ -532,7 +532,7 @@
 </tr>
 <tr class="row-even"><td><strong>cloud_albedo</strong></td>
 <td><em>path</em></td>
-<td><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/cloud_albedo</strong></td>
+<td><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/cloud_albedo_crb</strong></td>
 </tr>
 <tr class="row-odd"><td><strong>cloud_pressure</strong></td>
 <td><em>path</em></td>
