@@ -22,6 +22,8 @@
 
 * Improve speed of --list-derivations on a product.
 
+* Updates to S5P product ingestions.
+
 0.6 2017-04-23
 ~~~~~~~~~~~~~~
 
